// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The config resolver can also apply overrides per service 1`] = `
Object {
  "annotations": Array [
    Object {
      "localPath": "/Users/i053631/SAPDevelop/Code/Github/open-ux-odata/packages/ui5-middleware-fe-mockserver/test/myAnnotation.xml",
      "urlPath": "/my/Annotation.xml",
    },
  ],
  "contextBasedIsolation": true,
  "debug": true,
  "fileLoader": undefined,
  "metadataProcessor": undefined,
  "services": Array [
    Object {
      "contextBasedIsolation": true,
      "debug": true,
      "metadataPath": "/Users/i053631/SAPDevelop/Code/Github/open-ux-odata/packages/ui5-middleware-fe-mockserver/test/metadata.cds",
      "mockdataPath": "/Users/i053631/SAPDevelop/Code/Github/open-ux-odata/packages/ui5-middleware-fe-mockserver/test/mockData",
      "noETag": true,
      "strictKeyMode": true,
      "urlPath": "/my/service/URL",
      "watch": true,
    },
    Object {
      "metadataPath": "/Users/i053631/SAPDevelop/Code/Github/open-ux-odata/packages/ui5-middleware-fe-mockserver/test/metadata.cds",
      "mockdataPath": "/Users/i053631/SAPDevelop/Code/Github/open-ux-odata/packages/ui5-middleware-fe-mockserver/test/mockData",
      "urlPath": "/my/other/service/URL",
    },
  ],
  "strictKeyMode": true,
  "watch": true,
}
`;

exports[`The config resolver can also resolve cds path or empty services 1`] = `
Object {
  "annotations": Array [
    Object {
      "localPath": "/Users/i053631/SAPDevelop/Code/Github/open-ux-odata/packages/ui5-middleware-fe-mockserver/test/myAnnotation.xml",
      "urlPath": "/my/Annotation.xml",
    },
  ],
  "contextBasedIsolation": false,
  "debug": false,
  "fileLoader": undefined,
  "metadataProcessor": undefined,
  "services": Array [
    Object {
      "metadataPath": "/Users/i053631/SAPDevelop/Code/Github/open-ux-odata/packages/ui5-middleware-fe-mockserver/test/metadata.cds",
      "mockdataPath": "/Users/i053631/SAPDevelop/Code/Github/open-ux-odata/packages/ui5-middleware-fe-mockserver/test/mockData",
      "urlPath": "/my/service/URL",
    },
  ],
  "strictKeyMode": false,
  "watch": false,
}
`;

exports[`The config resolver can also resolve cds path or empty services 2`] = `
Object {
  "annotations": Array [],
  "contextBasedIsolation": false,
  "debug": false,
  "fileLoader": undefined,
  "metadataProcessor": undefined,
  "services": Array [],
  "strictKeyMode": false,
  "watch": false,
}
`;

exports[`The config resolver can resolve the configuration 1`] = `
Object {
  "annotations": Array [
    Object {
      "localPath": "/Users/i053631/SAPDevelop/Code/Github/open-ux-odata/packages/ui5-middleware-fe-mockserver/test/myAnnotation.xml",
      "urlPath": "/my/Annotation.xml",
    },
  ],
  "contextBasedIsolation": true,
  "debug": true,
  "fileLoader": undefined,
  "metadataProcessor": undefined,
  "services": Array [
    Object {
      "metadataPath": "/Users/i053631/SAPDevelop/Code/Github/open-ux-odata/packages/ui5-middleware-fe-mockserver/test/metadata.xml",
      "mockdataPath": "/Users/i053631/SAPDevelop/Code/Github/open-ux-odata/packages/ui5-middleware-fe-mockserver/test/mockData",
      "strictKeyMode": true,
      "urlPath": "/my/service/URL",
    },
  ],
  "strictKeyMode": true,
  "watch": true,
}
`;
